conecting with the backend

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,7 +1,7 @@
 <div class='card-deck'>
 
 	<div class="card-columns">
-		<div *ngFor='let evento of eventos'>
+		<div *ngFor='let evento of events'>
 			
 			<div class="card"   style="width: 18rem;" >
 				<h5>{{evento.name}}</h5>
